# Rendervis

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cc  main.cpp
include/core/: Application.hpp  Camera.hpp  Light.hpp  Scene.hpp  Transform.hpp
include/renderer/: Entity.hpp  Material.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp
include/util/: FileOperations.hpp
resources/shaders/: SolidColorPhong.glsl  frag.glsl  lightFrag.glsl  lightVert.glsl  materialPhongFrag.glsl  materialPhongVert.glsl  noSpecularFrag.glsl  phongFrag.glsl  phongVert.glsl  solidColor.glsl  textureFrag.glsl  vert.glsl
shaders/: frag.glsl  vert.glsl
src/core/: Application.cc  Camera.cc  Scene.cc
src/renderer/: Entity.cc  Mesh.cc  Shader.cc
